<resources>
    <string name="app_name">Hoopy</string>
    <string name="title_insert">Insert</string>
    <string name="title_update">Update</string>
    <string name="title_fetch">Fetch</string>
    <string name="title_upload">Upload</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by">Search by text/email/contact</string>
    <string name="search">SEARCH</string>
    <string name="get_image_link">Get Image Link</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="insert_users_data">Insert User\'s Data</string>
    <string name="insert_data">Insert Data</string>
    <string name="contact">Contact</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="update_data">Update Data</string>
    <string name="camera_icon">camera icon</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="choose_from_uploaded_images">Choose from Uploaded Images</string>
    <string name="saynotogarages">#SayNoToGarages</string>

    <string-array name="choose_profile_photo">
        <item>@string/take_photo</item>
        <item>@string/choose_from_gallery</item>
        <!--<item>@string/choose_from_uploaded_images</item>-->
    </string-array>

</resources>
