<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.FormActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20dp"
        android:text="@string/insert_users_data"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/frameLayout"
        />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            android:layout_gravity="bottom|center_horizontal"
            android:contentDescription="@string/user_profile_picture" />


        <ImageView
            android:id="@+id/cameraIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/camera_icon" />
    </FrameLayout>

    <ImageView
        android:id="@+id/nameIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_black_24dp"
        android:layout_marginBottom="@dimen/_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nameLayout"
        app:layout_constraintBottom_toBottomOf="@id/nameLayout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameIcon"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@drawable/edittext_color"
            android:hint="@string/name" />
        <requestFocus/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_email_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/emailLayout"
        android:layout_marginBottom="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="@id/emailLayout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/emailIcon"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:textColor="@drawable/edittext_color"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/usernameIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account_circle_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/usernameLayout"
        android:layout_marginBottom="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="@id/usernameLayout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/usernameIcon"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:textColor="@drawable/edittext_color"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>


    <ImageView
        android:id="@+id/contactIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_local_phone_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/contactLayout"
        android:layout_marginBottom="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="@id/contactLayout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/contactLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/contactIcon"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="phone"
            android:textColor="@drawable/edittext_color"
            android:layout_height="wrap_content"
            android:hint="@string/contact" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_40dp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_marginTop="23dp"
        android:background="@color/colorAccent"
        android:text="@string/insert_data"
        app:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactLayout" />

</android.support.constraint.ConstraintLayout>